js/js.translator/testData/incremental/invalidation/companionPropertiesWithCrossModuleInliner/lib2/l2int.1.kt
inline fun testIntProperty(): Int {
    return MyClass.intProperty
}
